# geode-auto-decorator

./: CMakeLists.txt  main.cpp  mod.json
.github/workflows/: build.yml
src/: main.cpp
